# aprs2influxdb

./: .dockerignore  .gitignore  .travis.yml  CHANGES.txt  Dockerfile  MANIFEST  MANIFEST.in  README.md  README.txt  aprs2influxdb.py  clerk.py  config.ini  requirements.txt  setup.cfg  setup.py
.github/: issue_template.md
aprs2influxdb/: __main__.py  aprs2influxdbscript.py  main.py
docker/: run.sh
