[tool:pytest]
addopts = --flake8
flake8-ignore = E262 E265 E266 E402 E501

[metadata]
name = aprs2influxdb
author = Bryce Salmi
author-email = Bryce@FaradayRF.com
summary = Connects to APRS-IS and saves packets to InfluxDB
description-file = README
home-page = https://github.com/FaradayRF/aprs2influxdb
license = GPLv3
version = 0.0.1rc1
classifier =
    "Intended Audience :: Education"
    "Intended Audience :: Science/Research"
    "Natural Language :: English"
    "Operating System :: POSIX :: Linux"
    "Programming Language :: Python"
    "Topic :: Scientific/Engineering"
    "Topic :: Communications :: Ham Radio"
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"

keywords =
    faraday
    radio
    faradayrf
    ham
    amateur
    aprs
    APRS-IS
    influxdb


[entry_points]
console_scripts =
    aprs2influxdb = aprs2influxdb:main
